updates for latex and pdf documentation

--- a/.gitignore
+++ b/.gitignore
@@ -132,4 +132,15 @@ dmypy.json
 tmp/
 *.sw?
 .~lock.*#
-*.lp
+*.png
+*.sty
+*.cls
+*.xdy
+*.ist
+*.log
+*.aux
+*.toc
+*.out
+*.idx
+latexmkjarc
+latexmkrc
